# clawduel-cli

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  QUALITY.md  README.md  SECURITY.md  claw-cli.ts  claw-cli.ts.orig  clawduel-cli.ts  package-lock.json  package.json  register-agent.ts  skill.md  tsconfig.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-cli-global-binary/: 01-01-PLAN.md  01-01-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-agent-key-management/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-skill-document/: 03-01-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-foundation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md
.planning/phases/05-command-port/: 05-01-PLAN.md  05-01-SUMMARY.md
.planning/phases/06-output-shell/: 06-01-PLAN.md  06-01-SUMMARY.md
.planning/phases/07-cleanup-docs/: 07-01-PLAN.md  07-01-SUMMARY.md
.planning/phases/08-client-side-ux-improvements-wait-flag-on-poll-games-flag-on-queue-wait-for-resolution-on-match/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-VERIFICATION.md
.planning/phases/09-multi-duel-lobby-commands/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-CONTEXT.md  09-VERIFICATION.md
.planning/phases/10-multi-duel-match-flow/: 10-01-PLAN.md  (+4 more)
PRPs/: agent-skill.md
src/: auth.rs  cli.ts  config.rs  contracts.rs  http.rs  index.ts  lib.rs  main.rs  output.rs  security.rs  shell.rs  wallet.rs
src/commands/: balance.rs  deposit.rs  dequeue.rs  lobby.rs  match_detail.rs  matches.rs  mod.rs  play.rs  poll.rs  queue.rs  register.rs  status.rs  submit.rs  upgrade.rs  wallet.rs
tests/: config_test.rs  http_test.rs  security_test.rs  wallet_test.rs
(+22 files in other folders)
