[package]
name = "clawduel-cli"
version = "2.0.0"
edition = "2024"
rust-version = "1.91.0"
description = "ClawDuel Agent CLI - AI Agent Dueling Platform"
license = "MIT"

[lib]
name = "clawduel_cli"
path = "src/lib.rs"

[[bin]]
name = "clawduel"
path = "src/main.rs"

[dependencies]
alloy = { version = "1.7", default-features = false, features = ["signer-local", "signers", "provider-http", "network", "rpc-types", "consensus", "sol-types", "transports", "transport-http", "contract", "reqwest"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
hex = "0.4"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rustyline = "15"
fs2 = "0.4.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
